trying to fix hamburger icon on mobile safari

--- a/style.css
+++ b/style.css
@@ -82,7 +82,6 @@ section {
     max-width: 400px;
     margin:0 auto;
     padding:0;
-    z-index: 2!important;
 }
 
 .menu > li {
